@@ -29,14 +29,14 @@
  * @package TYPO3
  * @subpackage linkvalidator
  */
-abstract class tx_linkvalidator_linkTypes_Abstract {
+abstract class tx_linkvalidator_linkTypes_Abstract implements tx_linkvalidator_linkTypes_Interface {
 
 	/**
 	 * Contains parameters needed for the rendering of the error message
 	 *
 	 * @var array
 	 */
-	private $errorParams = array();
+	protected $errorParams = array();
 
 	/**
 	 * Base type fetching method, based on the type that softRefParserObj returns.
@@ -59,7 +59,7 @@ abstract class tx_linkvalidator_linkTypes_Abstract {
 	 * @param  array      all parameters needed for the rendering of the error message
 	 * @return void
 	 */
-	public function setErrorParams(array $value) {
+	protected function setErrorParams(array $value) {
 		$this->errorParams = $value;
 	}
 
