@@ -1,5 +1,10 @@
 2011-01-19  Michael Miousse  <michael.miousse@infoglobe.ca> 
 
+	Added Feature #12340: Enhance the tx_linkvalidator_linkTypes_Interface thanks to Ernesto Baschny and Christopher
+
+
+2011-01-19  Michael Miousse  <michael.miousse@infoglobe.ca> 
+
 	Added Feature #12344: Migrate to t3lib_htmlmail to SwiftMailer thanks to Ernesto Baschny and Christopher
 
 	
